tests/NormalTests/paczka1/small_fuzzy/42273066.err
Error in line 3: lp9UfVN A4C 75,0
Error in line 15: riatniV S9oo 226,3
